force-app/main/default/objects/Acao_corretiva__c/Acao_corretiva__c.object-meta.xml
<CustomObject>
    <label>Ação corretiva</label>
    <nameField>
        <displayFormat>RCA-{00000}</displayFormat>
        <label>RCA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ações corretivas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>