force-app/main/default/objects/Acao_corretiva__c/fields/A_o_Corretiva_Detalhada__c.field-meta.xml
<CustomField>
    <fullName>A_o_Corretiva_Detalhada__c</fullName>
    <label>Ação Corretiva Detalhada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>