force-app/main/default/objects/Acao_corretiva__c/fields/A_o_corretiva_tomada__c.field-meta.xml
<CustomField>
    <fullName>A_o_corretiva_tomada__c</fullName>
    <label>Ação corretiva tomada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>