force-app/main/default/objects/Acao_corretiva__c/fields/Causa__c.field-meta.xml
<CustomField>
    <fullName>Causa__c</fullName>
    <formula>RNC__r.Poss_vel_causa_da_n_o_conformidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Causa</label>
    <type>Text</type>
</CustomField>