force-app/main/default/objects/Acao_corretiva__c/fields/Causas__c.field-meta.xml
<CustomField>
    <fullName>Causas__c</fullName>
    <label>Possível causas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>