force-app/main/default/objects/Acao_corretiva__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente:</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ações corretivas (Cliente:)</relationshipLabel>
    <relationshipName>A_es_corretivas1</relationshipName>
    <type>Lookup</type>
</CustomField>