force-app/main/default/objects/Acao_corretiva__c/fields/Cliente_reclamacao__c.field-meta.xml
<CustomField>
    <fullName>Cliente_reclamacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Ações corretivas (Cliente)</relationshipLabel>
    <relationshipName>A_es_corretivas1</relationshipName>
    <type>Lookup</type>
</CustomField>