force-app/main/default/objects/Acao_corretiva__c/fields/Cliente_reclamacao_name__c.field-meta.xml
<CustomField>
    <fullName>Cliente_reclamacao_name__c</fullName>
    <label>Cliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>