force-app/main/default/objects/Acao_corretiva__c/fields/Contrato_de_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Servi_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de Serviço</label>
    <referenceTo>Contrato_de_Servi_o__c</referenceTo>
    <relationshipLabel>Ações corretivas</relationshipLabel>
    <relationshipName>A_es_corretivas</relationshipName>
    <type>Lookup</type>
</CustomField>