force-app/main/default/objects/Acao_corretiva__c/fields/Data_da_abertura_do_RCA__c.field-meta.xml
<CustomField>
    <fullName>Data_da_abertura_do_RCA__c</fullName>
    <label>Data da abertura do RAC</label>
    <type>Date</type>
</CustomField>