force-app/main/default/objects/Acao_corretiva__c/fields/Descri_o_da_Ocorr_ncia__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_da_Ocorr_ncia__c</fullName>
    <label>Descrição da Ocorrência</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>