force-app/main/default/objects/Acao_corretiva__c/fields/Descri_o_detalhada_a_cerca_da_NC__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_detalhada_a_cerca_da_NC__c</fullName>
    <formula>RNC__r.Descricao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição detalhada a cerca da NC</label>
    <type>Text</type>
</CustomField>