force-app/main/default/objects/Acao_corretiva__c/fields/Descricao_da_NRC__c.field-meta.xml
<CustomField>
    <fullName>Descricao_da_NRC__c</fullName>
    <formula>RNC__r.Descricao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição da NRC</label>
    <type>Text</type>
</CustomField>