force-app/main/default/objects/Acao_corretiva__c/fields/Entregue_por__c.field-meta.xml
<CustomField>
    <fullName>Entregue_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entregue por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ações corretivas (Entregue por)</relationshipLabel>
    <relationshipName>A_es_corretivas2</relationshipName>
    <type>Lookup</type>
</CustomField>