force-app/main/default/objects/Acao_corretiva__c/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fornecedor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ações corretivas</relationshipLabel>
    <relationshipName>A_es_corretivas</relationshipName>
    <type>Lookup</type>
</CustomField>