force-app/main/default/objects/Acao_corretiva__c/fields/Item_da_Norma__c.field-meta.xml
<CustomField>
    <fullName>Item_da_Norma__c</fullName>
    <label>Item da Norma:</label>
    <length>100</length>
    <type>Text</type>
</CustomField>