force-app/main/default/objects/Acao_corretiva__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <label>Lote</label>
    <type>Phone</type>
</CustomField>