force-app/main/default/objects/Acao_corretiva__c/fields/NF__c.field-meta.xml
<CustomField>
    <fullName>NF__c</fullName>
    <label>NF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>