force-app/main/default/objects/Acao_corretiva__c/fields/Obs__c.field-meta.xml
<CustomField>
    <fullName>Obs__c</fullName>
    <label>Obs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>