force-app/main/default/objects/Acao_corretiva__c/fields/Ocorrencia__c.field-meta.xml
<CustomField>
    <fullName>Ocorrencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ocorrência</label>
    <referenceTo>Ocorrencia__c</referenceTo>
    <relationshipLabel>Ações corretivas</relationshipLabel>
    <relationshipName>Acoes_corretivas</relationshipName>
    <type>Lookup</type>
</CustomField>