force-app/main/default/objects/Acao_corretiva__c/fields/Ordem_de_trabalho__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_trabalho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem de trabalho</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Ações corretivas</relationshipLabel>
    <relationshipName>A_es_corretivas</relationshipName>
    <type>Lookup</type>
</CustomField>