force-app/main/default/objects/Acao_corretiva__c/fields/Quant__c.field-meta.xml
<CustomField>
    <fullName>Quant__c</fullName>
    <label>Quant.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>