force-app/main/default/objects/Acao_corretiva__c/fields/Responsavel_CONTA__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_CONTA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável (CONTA)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ações corretivas</relationshipLabel>
    <relationshipName>A_es_corretivas</relationshipName>
    <type>Lookup</type>
</CustomField>