force-app/main/default/objects/Acao_corretiva__c/fields/Responsavel_CONTATO__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_CONTATO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável (CONTATO)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ações corretivas (Responsável (CONTATO))</relationshipLabel>
    <relationshipName>A_es_corretivas4</relationshipName>
    <type>Lookup</type>
</CustomField>