force-app/main/default/objects/Acao_corretiva__c/fields/Resumo_da_Ocorr_ncia__c.field-meta.xml
<CustomField>
    <fullName>Resumo_da_Ocorr_ncia__c</fullName>
    <label>Resumo da Ocorrência</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>