force-app/main/default/objects/Acao_corretiva__c/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <label>Setor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desenvolvimento</fullName>
            </value>
            <value>
                <fullName>Administrativo</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>DEPARAMENTO PESSOAL</fullName>
            </value>
            <value>
                <fullName>Governo</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Serviço</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Compras</fullName>
            </value>
            <value>
                <fullName>Contabilidade</fullName>
            </value>
            <value>
                <fullName>Controladoria</fullName>
            </value>
            <value>
                <fullName>Locação</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Qualidade</fullName>
            </value>
            <value>
                <fullName>Educação</fullName>
            </value>
            <value>
                <fullName>Jurídico</fullName>
            </value>
            <value>
                <fullName>Operações</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>