force-app/main/default/objects/Acao_corretiva__c/fields/Sugest_o_para_Resolu_o__c.field-meta.xml
<CustomField>
    <fullName>Sugest_o_para_Resolu_o__c</fullName>
    <label>Sugestão para Resolução</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>