force-app/main/default/objects/Acao_corretiva__c/fields/Tempo_M_dio_da_AC__c.field-meta.xml
<CustomField>
    <fullName>Tempo_M_dio_da_AC__c</fullName>
    <formula>Data_de_conclus_o__c -  Data_da_abertura_do_RCA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Médio da AC (em dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>