force-app/main/default/objects/Acao_corretiva__c/fields/Verifica_o_da_efic_cia__c.field-meta.xml
<CustomField>
    <fullName>Verifica_o_da_efic_cia__c</fullName>
    <label>Verificação da eficácia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando resposta e conclusão da Ação Corretiva</fullName>
            </value>
            <value>
                <fullName>Ação Implementada / Eficaz</fullName>
            </value>
            <value>
                <fullName>Ação Não Implementada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>