force-app/main/default/objects/Acao_corretiva__c/recordTypes/N_o_conformidade.recordType-meta.xml
<RecordType>
    <fullName>N_o_conformidade</fullName>
    <active>true</active>
    <label>Não conformidade</label>
</RecordType>