force-app/main/default/objects/Acao_corretiva__c/recordTypes/Ocorrencia.recordType-meta.xml
<RecordType>
    <fullName>Ocorrencia</fullName>
    <active>true</active>
    <label>Ocorrência</label>
</RecordType>