force-app/main/default/objects/Acao_corretiva__c/validationRules/Material.validationRule-meta.xml
<ValidationRule>
    <fullName>Material</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(Origem__c)  = &quot;Material&quot; &amp;&amp;

(Item_da_Norma__c != &quot;&quot; ||
Cliente__c != &quot;&quot; ||
TEXT(Motivo__c ) != &quot;&quot; ||
Detalhes_outros__c != &quot;&quot; || 
Codigo__c != &quot;&quot; ||
Lote__c != &quot;&quot; ||
NF__c != &quot;&quot;||
Quant__c != &quot;&quot;))</errorConditionFormula>
    <errorMessage>Preencha devidamente os campos da origem &quot;Material&quot;  e certifique-se  de não ter preenchido o campo de outra origem.</errorMessage>
</ValidationRule>