force-app/main/default/objects/Acao_corretiva__c/validationRules/outro_usuarios_precisam_justificar.validationRule-meta.xml
<ValidationRule>
    <fullName>outro_usuarios_precisam_justificar</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),  /* Garante que a regra só se aplique a registros existentes */
    NOT($User.Id = &quot;00531000007i4eW&quot;),
    NOT($User.Id = &quot;00531000006UzZs&quot;),
    NOT($User.Id = &quot;003U400000Ip0TWIAZ&quot;),
    OR(
        ISBLANK(A_o_corretiva_tomada__c),  
        ISBLANK(Justificativa__c)               
    )
)</errorConditionFormula>
    <errorDisplayField>Justificativa__c</errorDisplayField>
    <errorMessage>É necessário preencher os campo: Justificativa e Tipo de Ação corretiva.</errorMessage>
</ValidationRule>