force-app/main/default/objects/Acao_corretiva__c/validationRules/Outros.validationRule-meta.xml
<ValidationRule>
    <fullName>Outros</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(Origem__c)  = &quot;Outros&quot; &amp;&amp;

(Item_da_Norma__c != &quot;&quot; ||
 Fornecedor__c != &quot;&quot; ||
NF2__c != &quot;&quot; ||
Quant2__c != &quot;&quot; ||
Codigo__c != &quot;&quot; ||
Lote__c != &quot;&quot; ||
NF__c != &quot;&quot;||
Quant__c != &quot;&quot; ||
Cliente__c != &quot;&quot; ||
TEXT(Motivo__c ) != &quot;&quot; ))

||
(TEXT(Origem__c)  = &quot;Outros&quot; &amp;&amp;
(
Detalhes_outros__c = &quot;&quot; 
)
)</errorConditionFormula>
    <errorMessage>Preencha devidamente os campos da origem &quot;Outros&quot;  e certifique-se  de não ter preenchido o campo de outra origem.</errorMessage>
</ValidationRule>