force-app/main/default/objects/Acao_corretiva__c/validationRules/Produto.validationRule-meta.xml
<ValidationRule>
    <fullName>Produto</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(Origem__c)  = &quot;Produto&quot; &amp;&amp;

(Item_da_Norma__c != &quot;&quot; ||
Fornecedor__c != &quot;&quot; ||
NF2__c != &quot;&quot; ||
Quant2__c != &quot;&quot; ||
Cliente__c != &quot;&quot; ||
TEXT(Motivo__c ) != &quot;&quot; ||
Detalhes_outros__c != &quot;&quot; ))</errorConditionFormula>
    <errorMessage>Preencha devidamente os campos da origem &quot;Produto&quot;  e certifique-se  de não ter preenchido o campo de outra origem.</errorMessage>
</ValidationRule>