force-app/main/default/objects/Acao_corretiva__c/validationRules/Responsavel.validationRule-meta.xml
<ValidationRule>
    <fullName>Responsavel</fullName>
    <active>false</active>
    <description>Verifica se só foi selecionado um campo entre &quot;Responsável&quot; e (Responsável conta)</description>
    <errorConditionFormula>if( Responsevel__c  != &quot;&quot; &amp;&amp;  Responsavel_CONTA__c != &quot;&quot;, true, false)</errorConditionFormula>
    <errorMessage>Preencha apenas um campo entre &quot;Responsável&quot; e &quot;Responsável (CONTA)&quot;. Caso o responsável tenha conta na comunidade preencha apenas &quot;Responsável&quot;, caso contrario, preencha apenas o campo &quot;Responsável (CONTA&quot;</errorMessage>
</ValidationRule>