force-app/main/default/objects/Acao_corretiva__c/validationRules/Status_e_prazo.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_e_prazo</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    OR( ISCHANGED(Status__c), ISCHANGED(Prazo__c), ISCHANGED(Obs__c), ISCHANGED(Encerrado__c)),
    $User.ProfileId != &apos;00ei0000000nKA9&apos;,
    $User.ProfileId != &apos;00e31000001dwIY&apos;,
    $User.ProfileId != &apos;00531000006UzZsAAK&apos;

)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Somente a Qualidade pode alterar o status</errorMessage>
</ValidationRule>