force-app/main/default/objects/Acao_corretiva__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Responsevel__c</columns>
    <columns>Data_da_abertura_do_RCA__c</columns>
    <columns>Prazo__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>