force-app/main/default/objects/Acao_corretiva__c/listViews/Finalizados.listView-meta.xml
<ListView>
    <fullName>Finalizados</fullName>
    <columns>NAME</columns>
    <columns>Responsevel__c</columns>
    <columns>Data_da_abertura_do_RCA__c</columns>
    <columns>Prazo__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Finalizado</value>
    </filters>
    <label>Finalizados</label>
</ListView>